@@ -209,6 +209,7 @@ restart_opcode:
 		}
 		SAVEIP;
 	}
+decode_stop_at_instruction:
 	FillFlags();
 	return CBRET_NONE;
 decode_end:
